pages/1.11/cli/command-reference/index.md
---
layout: layout.pug
navigationTitle:  Command Reference
title: Command Reference
menuWeight: 6
excerpt: Using the unique DC/OS commands

enterprise: false
---

<!-- The source repository for this topic is https://github.com/dcos/dcos-docs-site -->

This section lists the unique DC/OS commands.

| Command | Description |
|---------|-------------|
| [dcos](/1.11/cli/command-reference/dcos-auth/)   | Manage DC/OS environment variables. |
| [dcos auth](/1.11/cli/command-reference/dcos-auth/)   |  Manage DC/OS identity and access. |
| [docs cluster](/1.11/cli/command-reference/dcos-cluster/) |  Manage connections to DC/OS clusters. |
| [dcos config](/1.11/cli/command-reference/dcos-config/) |  Manage the DC/OS configuration file. |
| [dcos experimental](/1.11/cli/command-reference/dcos-experimental/) | Manage commands that under development and subject to change. |
| [dcos help](/1.11/cli/command-reference/dcos-help/)    | Display help information about DC/OS.  |
| [dcos job](/1.11/cli/command-reference/dcos-job/)    | Deploy and manage jobs in DC/OS.  |
| [dcos marathon](/1.11/cli/command-reference/dcos-marathon/)  |  Deploy and manage applications to DC/OS.  |
| [dcos node](/1.11/cli/command-reference/dcos-node/)   |  Administer and manage DC/OS cluster nodes.  |
| [dcos package](/1.11/cli/command-reference/dcos-package/) | Install and manage DC/OS software packages. |
| [dcos service](/1.11/cli/command-reference/dcos-service/)  |  Manage DC/OS services.  |
| [dcos task](/1.11/cli/command-reference/dcos-task/)  |  Manage DC/OS tasks.  |
